[package]
name = "nexuslog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
log = { version = "0.4.29", features = ["std"] }
pyo3 = { version = "0.27.2", optional = true }
arrayvec = "0.7.4"

[features]
default = []
python = ["pyo3", "pyo3/extension-module"]
